# study

./: README.md  README_pattern.md
Coursera/: .gitignore  README.md
Coursera/ModernCombinatorics/: README.md  pattern.java
EulerProject/: README.md
EulerProject/js/: README.md  pattern.js
MathCAD/: README.md
MathCAD/MaxfieldB_EssentialPrimeGuide/: README.md
antlr4/: .gitignore  README.md
antlr4/Parr_TheDefenitiveAntlr4Ref/: README.md  build_java.sh  clear.sh
antlr4/_separate/: README.md
antlr4/_winScript/: PowerShell_TimeMeasure.cmd  antlr4.bat  antlrjavac.bat  grun.bat
bash/: pattern.sh
bash/RUVDS_bash/: READMI.md
bash/_separate/: use_env_var.c
bison/Bison_manual_3.1/: pattern.y
bison/Bison_manual_3.2.2/: README.md
bison/_separate/: pattern.flex
burp/: README.md
burp/SunnyW_BurpCookbook/: README.md
c/: .gitignore  README.md
c/Kolcov_100examples/: pattern.c
c/Prata_languageC/: pattern.c
cmake/: .gitignore  README.md
cmake/_separate/02Libs/: CMakeLists.txt  main.c  somelib.c  somelib.h
cmake/_separate/04TestFlexAndBison/: CMakeLists.txt  Makefile  hGrammar.flex  mydriver.cc  mydriver.hh
cmd/: README.md  pattern.cmd
cpp/: .gitignore  README.md  pattern.cpp
docker/: README.md
flex/: README.md
java/: .gitignore  README.md  pattern.java
js/: .gitignore  pattern.js
kotlin/: README.md  pattern.kt
linux/: pattern.sh
lua/: README.md
make/: README.md
math/: README.md
python2/: README.md
python3/: .gitignore  pattern.py  pattern_sh.py
re2c/: README.md
reflex/: README.md
sed/: README.md
www/: README.md
(+1088 files in other folders)
